--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+--scroll-behavior: smooth!important;
+scroll-behavior: smooth!important;
+}
 
 body {
   color: white;
